Modify 'index.html', css & js to fix 'excess whitespace at bottom of page bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,12 @@
 /* -GENERAL STYLES- */
+html {
+    height: 100%;
+}
+
+body {
+    position: relative;
+    min-height: 100%;
+}
 
 #bg-outer {
     width: 100vw;
@@ -149,7 +157,7 @@
     background: url("../images/general/bg-dawn-sun.png");
     background-size: contain;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 20%;
     width: 200px;
     z-index: 1;
 }
@@ -166,7 +174,7 @@
         background: url("../images/general/bg-dawn-sun.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 200px;
         z-index: 1;
     }
@@ -178,10 +186,11 @@
 
 #clouds {
     position: absolute;
+    top: 450px;
     background: url("../images/general/bg-day-clouds.png");
     background-size: contain;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 20%;
     width: 250px;
     z-index: 2;
 }
@@ -202,7 +211,7 @@
         background: url("../images/general/bg-day-sun.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 200px;
         z-index: 1;
     }
@@ -216,7 +225,7 @@
         background: url("../images/general/bg-day-clouds.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 250px;
         z-index: 2;
     }
@@ -227,7 +236,7 @@
         background: url("../images/general/bg-day-clouds.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 250px;
         z-index: 2;
     }
@@ -241,7 +250,7 @@
         background: url("../images/general/bg-day-clouds.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 250px;
         z-index: 2;
     }
@@ -253,7 +262,7 @@
         background: url("../images/general/bg-day-clouds.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 250px;
         z-index: 2;
     }
@@ -271,7 +280,7 @@
         background: url("../images/general/bg-dusk-sun.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 200px;
         z-index: 1;
     }
@@ -293,7 +302,7 @@
         background: url("../images/general/bg-dark-moon.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 100px;
         z-index: 1;
     }
@@ -304,7 +313,7 @@
         background: url("../images/general/bg-dark-moon.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 100px;
         z-index: 1;
     }
@@ -318,7 +327,7 @@
         background: url("../images/general/bg-dark-moon.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 100px;
         z-index: 1;
     }
@@ -336,7 +345,7 @@
         background: url("../images/general/bg-doom-sun.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 200px;
         z-index: 1;
     }
@@ -354,7 +363,7 @@
         background: url("../images/general/bg-doom-sun.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 200px;
         z-index: 1;
     }
@@ -372,7 +381,7 @@
         background: url("../images/general/bg-dawn-sun.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 200px;
         z-index: 1;
     }
@@ -390,7 +399,7 @@
         background: url("../images/general/bg-day-sun.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 200px;
         z-index: 1;
     }
@@ -408,7 +417,7 @@
         background: url("../images/general/bg-dusk-sun.png");
         background-size: contain;
         background-repeat: no-repeat;
-        height: 100%;
+        height: 20%;
         width: 200px;
         z-index: 1;
     }
@@ -464,7 +473,7 @@ main {
 }
 
 main .container {
-    padding: 10px 0;
+    padding: 2.5rem 0;
     margin: 0 auto;
 }
 
@@ -478,7 +487,14 @@ h1 {
 }
 
 /* sticky footer */
-footer .container {
+footer {
+    height: 2.5rem;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    z-index: 11;
+}
+/* footer .container {
     width: auto;
     padding: 0 15px;
 }
@@ -490,7 +506,7 @@ footer .container {
 footer .made-by {
     font-family: 'Raleway', sans-serif;
     padding-top: 5px;
-}
+} */
 
 /* -ABOUT ME PAGE- */
 
@@ -615,10 +631,10 @@ form {
     h1 {
         font-size: 35px;
     }
-    
+/*     
     footer .made-by {
         font-size: 12px;
-    }
+    } */
 
     /* about me page */
     #about-me img {
